fixes to interval and tab completion